# neuralnetwork-project-miem

./: README.md
neuralnetwork-project-miem/: 99L97T.txt  ActivateFunction.cpp  ActivateFunction.h  CMakeLists.txt  Matrix.cpp  Matrix.h  NetWork.cpp  NetWork.h  NetWorkForVideoOne.sln  NetWorkForVideoOne.vcxproj  NetWorkForVideoOne.vcxproj.filters  PLACE YOUR DIGIT HERE.txt  lib_MNIST_examples.txt  source.cpp
neuralnetwork-project-miem/Debug/: NetWorkForVideoOne.exe.recipe  NetWorkForVideoOne.ilk  vc142.idb  vc143.idb
neuralnetwork-project-miem/Debug/NetWorkF.5f194157.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NetWorkForVideoOne.lastbuildstate  NetWorkForVideoOne.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
